[package]
name = "parquet-to-json"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
hex = "0.4.3"
parquet = "53.3.0"
fluvio = "0.24.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
async-std = { version = "1.13.0", features = ["attributes"] }
clap = { version = "4.5.23", features = ["derive"] }
